adding grouping selectors examples

--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,17 @@ div{
     font-size: 24px;
     font-weight:bold;
 }
+.inverted,.fancy{
+    font-family: Helvetica, "Times New Roman", sans-serif;
+    font-style: 28px;
+}
+
+.inverted{
+    background-color: black;
+    color: white;
+}
+
+.fancy{
+    background-color: yellow;
+}
+
